# Halcyon

./: .gitignore  LICENSE  README.md  notes.md  pytest.ini  setup.cfg  tokenFormat.md  usage.md
.github/workflows/: build+release+pypi.yml  build-and-release.yml  main.yml  pypi.yml
examples/: async_message_bot.py  basic_image_bot.py  basic_message_bot.py  image_archive_bot.py
src/: __init__.py  halcyon.py  message.py
src/halcyon/: __init__.py  __main__.py  enums.py  halcyon.py  message.py  restrunner.py  room.py  security.py
tests/: __init__.py  conftest.py  test_halcyon.py  test_message.py  test_room.py  test_security.py
