[metadata]
name = halcyon
version = 1.0.3
author = Wes Ring
author_email = hello@wesring.com
description = Halcyon is an easy to use matrix library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WesR/Halcyon
project_urls =
    Bug Tracker = https://github.com/WesR/Halcyon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.packages.find]
where = src